--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,33 +1,67 @@
-@use 'variables';
-
 @mixin hover {
-	@media (hover: hover) {
-		&:hover {
-			@content;
-		}
-	}
+  @media (hover: hover) {
+    &:hover {
+      @content;
+    }
+  }
 
-	@media (hover: none) {
-		&:active {
-			@content;
-		}
-	}
+  @media (hover: none) {
+    &:active {
+      @content;
+    }
+  }
 }
 
 @mixin mobile {
-	@media (max-width: variables.$sm) {
-		@content;
-	}
+  @media (max-width: $sm) {
+    @content;
+  }
 }
 
 @mixin tablet {
-	@media (max-width: variables.$lg) {
-		@content;
-	}
+  @media (max-width: $lg) {
+    @content;
+  }
 }
 
 @mixin container($width, $padding) {
-	max-width: calc($width + $padding * 2);
-	margin: 0 auto;
-	padding: 0 $padding;
+  max-width: calc($width + $padding * 2);
+  margin: 0 auto;
+  padding: 0 $padding;
+}
+
+@mixin input {
+  padding: 1.25rem;
+  font-size: 1.25rem;
+  line-height: 1.42;
+  font-family: inherit;
+  color: $color-black;
+  background-color: $color-beige-100;
+  border: 1px solid $color-beige-200;
+  border-radius: 10px;
+  outline: none;
+
+  @include mobile {
+    padding: 0.63rem;
+    font-size: 1rem;
+  }
+
+  @include hover {
+    background-color: $color-beige-200;
+  }
+
+  &:focus {
+    background-color: $color-beige-200;
+    border: 1px solid $color-gray-300;
+  }
+
+  &::placeholder {
+    font-size: 1.25rem;
+    line-height: 1.42;
+    color: $color-gray-300;
+
+    @include mobile {
+      font-size: 1rem;
+    }
+  }
 }
