Add form: validation and error in inputs

--- a/src/components/common/Form/Form.module.scss
+++ b/src/components/common/Form/Form.module.scss
@@ -20,5 +20,11 @@
 
 .button {
   grid-column: span 2;
+  width: 25%;
+  margin-left: auto;
   padding: 0.8rem;
+
+  @include tablet {
+    width: 100%;
+  }
 }
