--- a/src/components/common/Input/Input.module.scss
+++ b/src/components/common/Input/Input.module.scss
@@ -1,21 +1,24 @@
 .input {
   @include input;
 
-  &[type='date'] {
-    text-transform: uppercase;
-  }
-
   &[type='number']::-webkit-outer-spin-button,
   &[type='number']::-webkit-inner-spin-button {
     margin: 0;
     -webkit-appearance: none;
   }
+
+  &.incorrect {
+    border-color: $color-red;
+    color: $color-red;
+  }
 }
 
-.incorrect {
-  color: $color-gray-300;
+.error {
+  color: $color-red;
+  opacity: 0;
+  transition: opacity 0.3s ease;
 }
 
-.hiddenInput {
-  display: none;
+.show {
+  opacity: 1;
 }
