--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,4 +13,6 @@ $color-gray-100: #f1f3f2;
 $color-beige-200: #f4f0e9;
 $color-beige-100: #f9f7f4;
 
+$color-red: #ff3d3d;
+
 $primary-font: 'Roboto', 'Arial', sans-serif;
