--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -1,15 +1,51 @@
 .wrapper {
-	position: absolute;
-	z-index: 5;
-	inset: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	padding: 0 1rem;
-	background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  z-index: 5;
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal {
-	position: static;
-	z-index: 10;
+  position: absolute;
+  z-index: 10;
+  padding: 0 1rem;
+}
+
+.delete {
+  position: absolute;
+  top: 25px;
+  right: 26px;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  border: none;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+  transform: translateY(-50%);
+
+  @include hover {
+    opacity: 0.5;
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    top: 50%;
+    right: 3px;
+    width: 25px;
+    height: 2px;
+    background-color: $color-black;
+    content: '';
+  }
+
+  &::before {
+    transform: translateY(-50%) rotate(45deg);
+  }
+
+  &::after {
+    transform: translateY(-50%) rotate(-45deg);
+  }
 }
