--- a/src/components/common/Previews/Preview.module.scss
+++ b/src/components/common/Previews/Preview.module.scss
@@ -1,13 +1,25 @@
 .wrapper {
-	// grid-column: span 2;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	
+  display: flex;
+  justify-content: right;
+  align-items: center;
+
+  @media (max-width: $sm-xs) {
+    justify-content: center;
+  }
 }
 
 .thumb {
-	width: 200px;
-	height: 200px;
-	object-fit: cover;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
+
+.name {
+  font-size: 1rem;
+	text-align: center;
+  color: $color-black;
+
+  @media (max-width: 370px) {
+    font-size: 0.8rem;
+  }
 }
