--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -9,9 +9,14 @@
 }
 
 .modal {
-  position: absolute;
+  position: fixed;
   z-index: 10;
   padding: 0 1rem;
+
+  @media (max-width: $sm-xs) {
+    height: 80vh;
+    overflow-y: scroll;
+  }
 }
 
 .delete {
