--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -17,7 +17,17 @@
     background-color: darken($color-beige-200, 20%);
   }
 
-@include mobile {
+  @include mobile {
     font-size: 1rem;
   }
+}
+
+.withIcon {
+  padding: 0;
+  font-size: 0;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
 }
