--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -11,11 +11,13 @@
 .modal {
   position: fixed;
   z-index: 10;
+  width: 90%;
   padding: 0 1rem;
 
-  @media (max-width: $sm-xs) {
+  @include mobile {
+    width: 100%;
     height: 80vh;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 }
 
