--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -1,19 +1,21 @@
 .movie {
+  position: relative;
   display: flex;
+  justify-content: space-between;
   gap: 1rem;
   padding: 1.25rem;
   background-color: $color-white;
   border: 2px solid transparent;
   border-radius: 0.625rem;
 
-  @media (max-width: 460px) {
+  @media (max-width: 600px) {
     flex-direction: column;
   }
 }
 
 .cover {
   width: 200px;
-  height: 235px;
+  height: 240px;
   object-fit: cover;
   border-radius: 10px;
 
@@ -37,7 +39,7 @@
 
 .review {
   position: relative;
-  height: 70px;
+  height: 145px;
   font-size: 1rem;
   overflow: hidden;
 
@@ -57,4 +59,16 @@
     pointer-events: none;
     content: '';
   }
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttons {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
