--- a/src/components/common/Form/Form.module.scss
+++ b/src/components/common/Form/Form.module.scss
@@ -13,12 +13,16 @@
 }
 
 .button {
-  grid-column: span 2;
-  width: 25%;
-  margin-left: auto;
+  width: 100%;
   padding: 0.8rem;
 
   @include tablet {
     width: 100%;
   }
+}
+
+.buttons {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
