--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  position: absolute;
+  position: fixed;
   z-index: 5;
   inset: 0;
   display: flex;
@@ -12,12 +12,12 @@
   position: fixed;
   z-index: 10;
   width: 90%;
+  height: 95%;
   padding: 0 1rem;
+  overflow-y: auto;
 
   @include mobile {
     width: 100%;
-    height: 80vh;
-    overflow-y: auto;
   }
 }
 
