--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -71,4 +71,10 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  display: flex;
+  gap: .5rem;
+
+  @media (max-width: $xs) {
+    flex-direction: column;
+  }
 }
