--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -1,7 +1,6 @@
 .movie {
   position: relative;
   display: flex;
-  justify-content: space-between;
   gap: 1rem;
   padding: 1.25rem;
   background-color: $color-white;
@@ -16,8 +15,8 @@
 .cover {
   width: 200px;
   height: 240px;
-  object-fit: cover;
   border-radius: 10px;
+  object-fit: cover;
 
   @include mobile {
     height: 200px;
@@ -72,7 +71,7 @@
   top: 10px;
   right: 10px;
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
 
   @media (max-width: $xs) {
     flex-direction: column;
