--- a/src/components/common/Form/Form.module.scss
+++ b/src/components/common/Form/Form.module.scss
@@ -1,9 +1,11 @@
 .form {
+  position: relative;
   height: 95vh;
   padding: 2rem;
   background-color: $color-white;
   border-radius: 20px;
   overflow-y: auto;
+  scrollbar-width: thin;
 
   @include tablet {
     height: 75vh;
