--- a/src/components/common/Textarea/Textarea.module.scss
+++ b/src/components/common/Textarea/Textarea.module.scss
@@ -9,4 +9,19 @@
     resize: none;
     min-height: 132px;
   }
+
+  &.incorrect {
+    border-color: $color-red;
+    color: $color-red;
+  }
+}
+
+.error {
+  color: $color-red;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.show {
+  opacity: 1;
 }
