--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -1,33 +1,86 @@
+$buttons: (
+  'default' $color-primary-100 $color-primary-200,
+  'save' $color-green-100 $color-green-200,
+  'delete' $color-red-100 $color-red-200
+);
+
 .button {
-  padding: 0.5rem 1rem;
+  padding: 1rem;
   font-size: 20px;
   font-family: inherit;
-  color: $color-black;
-  background-color: $color-beige-200;
-  border: 1px solid transparent;
-  border-radius: 6px;
-  transition: background-color 0.3s ease;
+  color: $color-white;
+  border: none;
+  border-radius: 12px;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
   cursor: pointer;
-
-  @include hover {
-    background-color: darken($color-beige-200, 10%);
-  }
-
-  &:active {
-    background-color: darken($color-beige-200, 20%);
-  }
 
   @include mobile {
     font-size: 1rem;
   }
+
+  &:disabled {
+    opacity: 0.6;
+    pointer-events: none;
+  }
+
+  &:not(.onlyIcon) .icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    width: 30px;
+    height: 30px;
+    transition: transform 0.3s ease;
+    transform: translateY(-50%);
+  }
 }
 
 .withIcon {
-  padding: 0;
-  font-size: 0;
+  position: relative;
+  padding: 1rem 4rem 1rem 1rem;
 }
 
-.icon {
-  width: 30px;
-  height: 30px;
+@each $name, $color100, $color200 in $buttons {
+  .#{$name} {
+    background-color: $color100;
+
+    @include hover {
+      background-color: darken($color100, 10%);
+    }
+
+    &:active {
+      background-color: $color200;
+      box-shadow: inset 0 4px 20px 0 rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+
+.onlyIcon {
+  padding: 0;
+  font-size: 0;
+  background-color: transparent;
+
+  @include hover {
+    background-color: transparent;
+  }
+
+  &:active {
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  .icon {
+    color: $color-black-4;
+    width: 20px;
+    height: 20px;
+    transition: transform 0.2s ease;
+
+    @include hover {
+      transform: translateY(-2px);
+    }
+
+    @include tablet {
+      width: 25px;
+      height: 25px;
+    }
+  }
 }
