--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -17,7 +17,7 @@
 .delete {
   position: absolute;
   top: 25px;
-  right: 26px;
+  right: 27px;
   width: 30px;
   height: 30px;
   background-color: transparent;
@@ -34,11 +34,15 @@
   &::after {
     position: absolute;
     top: 50%;
-    right: 3px;
-    width: 25px;
+    right: 0;
+    width: 20px;
     height: 2px;
     background-color: $color-black;
     content: '';
+
+    @media (max-width: $xs) {
+      width: 15px;
+    }
   }
 
   &::before {
@@ -47,5 +51,10 @@
 
   &::after {
     transform: translateY(-50%) rotate(-45deg);
+  }
+
+  @media (max-width: $xs) {
+    width: 20px;
+    height: 20px;
   }
 }
