--- a/src/components/common/MoviesItems/MoviesItems.module.scss
+++ b/src/components/common/MoviesItems/MoviesItems.module.scss
@@ -1,6 +1,10 @@
 .movies {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
-	margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2.5rem;
+  margin: 1rem 0;
+
+  @media (max-width: 1230px) {
+    justify-content: center;
+  }
 }
