Add movie-item: added isFavourite field for movie, added favourite icon component, changed styles for details modal, changed var names

--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -69,7 +69,7 @@ $buttons: (
   }
 
   .icon {
-    color: $color-black-4;
+    color: $color-gray-300;
     width: 20px;
     height: 20px;
     transition: transform 0.2s ease;
