--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -37,7 +37,7 @@
     right: 0;
     width: 20px;
     height: 2px;
-    background-color: $color-black;
+    background-color: $color-gray-200;
     content: '';
 
     @media (max-width: $xs) {
