--- a/src/components/common/MovieCover/MovieCover.module.scss
+++ b/src/components/common/MovieCover/MovieCover.module.scss
@@ -8,6 +8,6 @@
 .default {
   width: 250px;
   height: 370px;
-  background-color: $color-black-2;
+  background-color: $color-gray-200;
   border-radius: 10px;
 }
