--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,11 +3,13 @@ $sm-xs: 640px;
 $sm: 768px;
 $lg: 1024px;
 
-$color-black: #1b1f2b;
 $color-white: #ffffff;
 
-$color-black-2: #abafb1;
-$color-black-4: #5e6366;
+$color-black: #111827;
+
+$color-gray-100: #9ca3af;
+$color-gray-200: #abafb1;
+$color-gray-300: #5e6366;
 
 $color-primary-100: #5570f1;
 $color-primary-200: #5b6ec6;
@@ -17,9 +19,6 @@ $color-red-200: #c95f58;
 
 $color-green-100: #32936f;
 $color-green-200: #458b71;
-
-$color-gray-100: #9ca3af;
-$color-gray-200: #111827;
 
 $color-beige-200: #f4f0e9;
 $color-beige-100: #f9f7f4;
