--- a/src/components/common/Dropzone/Dropzone.module.scss
+++ b/src/components/common/Dropzone/Dropzone.module.scss
@@ -24,7 +24,7 @@
   font-size: 1.13rem;
   line-height: 1.91rem;
   text-align: center;
-  color: $color-black-4;
+  color: $color-gray-300;
 
   @include mobile {
     font-size: 1rem;
