--- a/src/components/common/ItemDetails/ItemDetails.module.scss
+++ b/src/components/common/ItemDetails/ItemDetails.module.scss
@@ -15,7 +15,6 @@
 .main {
   display: flex;
   gap: 1rem;
-  color: $color-black;
 
   @include mobile {
     flex-direction: column;
@@ -26,16 +25,65 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 1.14;
+  color: $color-black;
+}
 
-  @include mobile {
-    font-size: 1rem;
-  }
+.title {
+  margin-bottom: 0.3rem;
+}
+
+.subtitle {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  line-height: 1.19;
+}
+
+.dot {
+  display: inline-block;
+  width: 10px;
+  height: 2px;
+  background-color: $color-black;
+}
+
+.name {
+  font-size: 2.5rem;
+}
+
+.year {
+  font-weight: 300;
 }
 
 .review {
-  margin-top: 1rem;
+  margin-top: 0.3rem;
   font-size: 1rem;
-  line-height: 1.13;
+  line-height: 1.4;
+  color: $color-black;
+}
+
+.cover {
+  width: 250px;
+
+  @include mobile {
+    width: 210px;
+    height: 330px;
+  }
+
+  &Wrapper {
+    position: relative;
+  }
+}
+
+.favourite {
+  cursor: auto;
+
+  @include hover {
+    background-color: transparent;
+  }
+
+  &:active {
+    background-color: transparent;
+  }
 }
