--- a/src/components/common/Form/Form.module.scss
+++ b/src/components/common/Form/Form.module.scss
@@ -3,7 +3,7 @@
   height: 95vh;
   padding: 2rem 2.5rem;
   background-color: $color-white;
-  border-radius: 20px;
+  border-radius: 20px 0 0 20px;
   overflow-y: auto;
   scrollbar-width: thin;
 
