--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -31,6 +31,27 @@
   gap: 0.5rem;
 }
 
+.iconBtn {
+  position: relative;
+
+  &::before {
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    width: 0;
+    height: 3px;
+    background-color: $color-primary-100;
+    transition: width 0.3s ease;
+    content: '';
+  }
+
+  @include hover {
+    &::before {
+      width: 100%;
+    }
+  }
+}
+
 .detailsModal {
   width: 60%;
   height: 90vh;
