Add form: done validation for all inputs, added skeleton component for items

--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -20,7 +20,11 @@ $buttons: (
 
   &:disabled {
     opacity: 0.6;
-    pointer-events: none;
+    cursor: not-allowed;
+
+    @include hover {
+      background-color: $color-red-100;
+    }
   }
 
   &:not(.onlyIcon) .icon {
