--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -5,13 +5,27 @@
   flex-direction: column;
   gap: 0.75rem;
   border-radius: 0.625rem;
+
+  &Skeleton {
+    gap: 0.6rem;
+  }
 }
 
-.cover {
-  width: 300px;
-  height: 440px;
-  border-radius: 10px;
-  object-fit: cover;
+.coverSkeleton {
+  height: 370px;
+
+  &Wrapper {
+    width: 250px;
+  }
+}
+
+.rowSkeleton {
+  height: 20px;
+
+  &Wrapper {
+    width: 100%;
+    height: 20px;
+  }
 }
 
 .content {
@@ -23,6 +37,10 @@
 
   @include mobile {
     font-size: 1rem;
+  }
+
+  &Skeleton {
+    gap: 0.4rem;
   }
 }
 
