--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -16,4 +16,16 @@
 
 .delete {
   @include delete(15px, 30px);
+
+  @media (max-width: $xs) {
+    width: 20px;
+    height: 20px;
+  }
+
+  &::before,
+  &::after {
+    @media (max-width: $xs) {
+      width: 15px;
+    }
+  }
 }
