--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -5,9 +5,22 @@
   flex-direction: column;
   gap: 0.75rem;
   border-radius: 0.625rem;
+  transition: transform 0.3s ease, background-color 0.3s ease,
+    box-shadow 0.3s ease;
+  cursor: pointer;
 
   &Skeleton {
     gap: 0.6rem;
+  }
+
+  @include hover {
+    transform: translateY(-10px);
+    background-color: $color-white;
+    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.5);
+  }
+
+  &:active {
+    box-shadow: none;
   }
 }
 
@@ -32,6 +45,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  padding: 0 0.6rem 0.5rem 0.6rem;
   font-size: 1.5rem;
   line-height: 1.14;
 
