--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,8 +20,7 @@ $color-red-200: #c95f58;
 $color-green-100: #32936f;
 $color-green-200: #458b71;
 
-$color-beige-200: #f4f0e9;
-$color-beige-100: #f9f7f4;
+$color-beige: #f9f7f4;
 
 $input-default-bg: rgba(239, 241, 249, 0.6);
 $input-focus-bg: rgba(233, 236, 248, 0.9);
