--- a/src/components/common/Label/Label.module.scss
+++ b/src/components/common/Label/Label.module.scss
@@ -20,9 +20,9 @@
 }
 
 .error {
-  color: $color-red-100;
+  color: $color-red;
 }
 
 .valid {
-  color: $color-green-100;
+  color: $color-green;
 }
