--- a/src/components/common/SearchInput/SearchInput.module.scss
+++ b/src/components/common/SearchInput/SearchInput.module.scss
@@ -7,7 +7,7 @@
 
   margin-bottom: 2rem;
   padding-left: 3.13rem;
-  box-shadow: 4px 4px 9px 0px rgba(34, 60, 80, 0.2);
+  background: none;
 }
 
 .icon {
@@ -22,6 +22,7 @@
   opacity: 0;
   transition: transform 0.1s ease, opacity 0.3s ease;
   cursor: pointer;
+  pointer-events: none;
 
   &::after,
   &::before {
@@ -31,7 +32,7 @@
   @include hover {
     &::after,
     &::before {
-      background-color: $color-red-100;
+      background-color: $color-red;
     }
   }
 
@@ -42,4 +43,5 @@
 
 .show {
   opacity: 1;
+  pointer-events: all;
 }
