--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,6 +1,6 @@
 body {
   font-family: $primary-font;
-  background-color: $color-beige;
+  background-color: $color-lightGray-1;
   scroll-behavior: smooth;
 }
 
