--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -1,6 +1,8 @@
 $buttons: (
-  // 'save' $color-green $color-green-200,
-  // 'delete' $color-red $color-red-200
+  'default' $color-primary-100 $color-primary-shadow-100
+    $color-primary-shadow-200,
+  'delete' $color-red $color-red-shadow-100 $color-red-shadow-200,
+  'save' $color-green $color-green-shadow-100 $color-green-shadow-200
 );
 
 .button {
@@ -8,7 +10,6 @@ $buttons: (
   font-size: 20px;
   font-family: inherit;
   color: $color-lightGray-1;
-  background-color: $color-primary-100;
   border: none;
   border-radius: 12px;
   transition: background-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
@@ -22,23 +23,7 @@ $buttons: (
     color: $color-white;
   }
 
-  &:disabled {
-    opacity: 0.6;
-    cursor: not-allowed;
-
-    @include hover {
-      background-color: $color-red;
-      color: $color-lightGray-1;
-    }
-
-    &:active {
-      background-color: $color-red;
-      box-shadow: inset 0.2rem 0.2rem 1rem $color-red-shadow-100,
-        inset -0.2rem -0.2rem 1rem $color-red-shadow-200, $shadow;
-    }
-  }
-
-  &:not(.onlyIcon) .icon {
+  .icon {
     position: absolute;
     right: 10px;
     top: 50%;
@@ -53,80 +38,31 @@ $buttons: (
   padding: 1rem 4rem 1rem 1rem;
 }
 
-// @each $name, $color100, $color200 in $buttons {
-//   .#{$name} {
-//     background-color: $color100;
+@each $name, $color, $shadow100, $shadow200 in $buttons {
+  .#{$name} {
+    background-color: $color;
+    box-shadow: inset 0.2rem 0.2rem 1rem $shadow100,
+      inset -0.2rem -0.2rem 1rem $shadow200, $shadow;
 
-//     @include hover {
-//       background-color: darken($color100, 10%);
-//     }
-
-//     &:active {
-//       background-color: $color200;
-//       box-shadow: inset 0 4px 20px 0 rgba(0, 0, 0, 0.2);
-//     }
-//   }
-// }
-
-.default {
-  box-shadow: inset 0.2rem 0.2rem 1rem $color-primary-shadow-100,
-    inset -0.2rem -0.2rem 1rem $color-primary-shadow-200, $shadow;
-
-  &:active {
-    box-shadow: inset 0.2rem 0.2rem 1rem $color-primary-shadow-200,
-      inset -0.2rem -0.2rem 1rem $color-primary-shadow-100;
-  }
-}
-
-.delete {
-  background-color: $color-red;
-  box-shadow: inset 0.2rem 0.2rem 1rem $color-red-shadow-100,
-    inset -0.2rem -0.2rem 1rem $color-red-shadow-200, $shadow;
-
-  &:active {
-    box-shadow: inset 0.2rem 0.2rem 1rem $color-red-shadow-200,
-      inset -0.2rem -0.2rem 1rem $color-red-shadow-100;
-  }
-}
-
-.save {
-  background-color: $color-green;
-  box-shadow: inset 0.2rem 0.2rem 1rem #7bffce,
-    inset -0.2rem -0.2rem 1rem #00432a, $shadow;
-
-  &:active {
-    box-shadow: inset 0.2rem 0.2rem 1rem #00432a,
-      inset -0.2rem -0.2rem 1rem #7bffce;
-  }
-}
-
-.onlyIcon {
-  padding: 0;
-  font-size: 0;
-  background-color: transparent;
-
-  @include hover {
-    background-color: transparent;
-  }
-
-  &:active {
-    box-shadow: none;
-    background-color: transparent;
-  }
-
-  .icon {
-    color: $color-gray-300;
-    width: 20px;
-    height: 20px;
-    transition: transform 0.2s ease;
-
-    @include hover {
-      transform: translateY(-2px);
+    &:active {
+      box-shadow: inset 0.2rem 0.2rem 1rem $shadow200,
+        inset -0.2rem -0.2rem 1rem $shadow100;
     }
 
-    @include tablet {
-      width: 25px;
-      height: 25px;
+    &:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+
+      @include hover {
+        background-color: $color;
+        color: $color-lightGray-1;
+      }
+
+      &:active {
+        background-color: $color;
+        box-shadow: inset 0.2rem 0.2rem 1rem $shadow100,
+          inset -0.2rem -0.2rem 1rem $shadow200, $shadow;
+      }
     }
   }
 }
