--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -5,8 +5,7 @@
   flex-direction: column;
   gap: 0.75rem;
   border-radius: 0.625rem;
-  transition: transform 0.3s ease, background-color 0.3s ease,
-    box-shadow 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   cursor: pointer;
 
   &Skeleton {
@@ -15,12 +14,11 @@
 
   @include hover {
     transform: translateY(-10px);
-    background-color: $color-white;
-    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.5);
+    box-shadow: $inner-shadow-hidden, $shadow;
   }
 
   &:active {
-    box-shadow: none;
+    box-shadow: $inner-shadow;
   }
 }
 
