--- a/src/components/common/Button/Button.module.scss
+++ b/src/components/common/Button/Button.module.scss
@@ -18,26 +18,14 @@ $buttons: (
     font-size: 1rem;
   }
 
-  &:disabled {
-    opacity: 0.6;
-    cursor: not-allowed;
-
-    @include hover {
-      background-color: $color-red-100;
-    }
-  }
-
-  &:not(.onlyIcon) {
+  .icon {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    width: 30px;
+    height: 30px;
+    transform: translateY(-50%);
     box-shadow: 4px 4px 9px 0px rgba(34, 60, 80, 0.2);
-
-    .icon {
-      position: absolute;
-      right: 10px;
-      top: 50%;
-      width: 30px;
-      height: 30px;
-      transform: translateY(-50%);
-    }
   }
 }
 
@@ -58,36 +46,19 @@ $buttons: (
       background-color: $color200;
       box-shadow: inset 0 4px 20px 0 rgba(0, 0, 0, 0.2);
     }
-  }
-}
 
-.onlyIcon {
-  padding: 0;
-  font-size: 0;
-  background-color: transparent;
+    &:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
 
-  @include hover {
-    background-color: transparent;
-  }
+      @include hover {
+        background-color: $color100;
+      }
 
-  &:active {
-    box-shadow: none;
-    background-color: transparent;
-  }
-
-  .icon {
-    color: $color-gray-300;
-    width: 20px;
-    height: 20px;
-    transition: transform 0.2s ease;
-
-    @include hover {
-      transform: translateY(-2px);
-    }
-
-    @include tablet {
-      width: 25px;
-      height: 25px;
+      &:active {
+        background-color: $color100;
+        box-shadow: none;
+      }
     }
   }
 }
