--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -4,41 +4,35 @@
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
-  border-radius: 0.625rem;
+  border-radius: 0.63rem;
   transition: transform 0.3s ease, background-color 0.3s ease,
     box-shadow 0.3s ease;
   cursor: pointer;
 
-  &Skeleton {
-    gap: 0.6rem;
-  }
-
   @include hover {
-    transform: translateY(-10px);
-    background-color: $color-white;
-    box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.5);
+    &:not(&Skeleton) {
+      transform: translateY(-10px);
+      background-color: $color-white;
+      box-shadow: 0px 4px 35px rgba(168, 172, 176, 0.5);
+    }
   }
 
   &:active {
     box-shadow: none;
   }
-}
 
-.coverSkeleton {
-  height: 370px;
-
-  &Wrapper {
-    width: 250px;
+  &Skeleton {
+    border-radius: 0;
+    overflow: hidden;
+    gap: 0.6rem;
   }
+}
+.coverSkeleton {
+  @include skeleton(250px, 370px, 0.63rem);
 }
 
 .rowSkeleton {
-  height: 20px;
-
-  &Wrapper {
-    width: 100%;
-    height: 20px;
-  }
+  @include skeleton(100%, 20px, 0.38rem);
 }
 
 .content {
@@ -54,7 +48,7 @@
   }
 
   &Skeleton {
-    gap: 0.4rem;
+    padding: 0;
   }
 }
 
