--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -111,3 +111,35 @@
     transform: rotate(-45deg);
   }
 }
+
+@mixin skeleton($width, $height, $radius: 0) {
+  position: relative;
+  width: $width;
+  height: $height;
+  background-color: #eee;
+  border-radius: $radius;
+
+  &::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(
+      90deg,
+      rgba(#fff, 0) 0,
+      rgba(#fff, 0.2) 20%,
+      rgba(#fff, 0.5) 60%,
+      rgba(#fff, 0)
+    );
+    transform: translateX(-100%);
+    animation: shimmer 2s infinite;
+    content: '';
+  }
+
+  @keyframes shimmer {
+    100% {
+      transform: translateX(100%);
+    }
+  }
+}
