Refactor form: refactored dropzone, removed react-dropzone lib

--- a/src/components/common/ItemDetails/ItemDetails.module.scss
+++ b/src/components/common/ItemDetails/ItemDetails.module.scss
@@ -61,6 +61,11 @@
     background-color: transparent;
   }
 
+  @include mobile {
+    right: auto;
+    left: 0;
+  }
+
   &:active {
     background-color: transparent;
   }
