--- a/src/components/common/Dropzone/Dropzone.module.scss
+++ b/src/components/common/Dropzone/Dropzone.module.scss
@@ -19,13 +19,15 @@
   }
 }
 
-.text {
-  width: 70%;
-  font-size: 1.13rem;
-  line-height: 1.91rem;
-  text-align: center;
-  color: $color-gray-300;
+.wrapper {
+  display: flex;
+  flex-direction: column;
+}
 
+.label {
+  @include input;
+}
+.text {
   @include mobile {
     font-size: 1rem;
     line-height: 1.5rem;
