Fix modal: fixed dropzone validation, fixed styles for modals

--- a/src/components/common/Form/Form.module.scss
+++ b/src/components/common/Form/Form.module.scss
@@ -1,6 +1,6 @@
 .form {
   position: relative;
-  height: 95vh;
+  height: 100%;
   padding: 2rem 2.5rem;
   background-color: $color-white;
   border-radius: 20px;
