--- a/src/components/common/ItemDetails/ItemDetails.module.scss
+++ b/src/components/common/ItemDetails/ItemDetails.module.scss
@@ -28,6 +28,10 @@
   font-size: 1rem;
   line-height: 1.14;
   color: $color-black;
+
+  @media (max-width: 330px) {
+    font-size: 0.97rem;
+  }
 }
 
 .title {
