--- a/src/components/common/MoviesItem/MoviesItem.module.scss
+++ b/src/components/common/MoviesItem/MoviesItem.module.scss
@@ -76,21 +76,25 @@
   }
 }
 
-.detailsModal {
-  width: 60%;
-  height: 90vh;
+.details {
+  height: 100%;
+  max-height: 70vh;
   overflow-y: auto;
 
-  @include tablet {
-    width: 80%;
-  }
+  &Modal {
+    width: 60%;
 
-  @include mobile {
-    width: 90%;
-  }
+    @include tablet {
+      width: 80%;
+    }
 
-  @media (max-width: $xs) {
-    width: 100%;
+    @include mobile {
+      width: 90%;
+    }
+
+    @media (max-width: $xs) {
+      width: 100%;
+    }
   }
 }
 
@@ -98,4 +102,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.editForm {
+  max-height: 80vh;
 }
