Fix modal: fixed delete button on mobile modal

--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -17,9 +17,8 @@
 .delete {
   @include delete(15px, 30px);
 
-  @media (max-width: $xs) {
-    width: 20px;
-    height: 20px;
+  @include mobile {
+    display: none;
   }
 
   &::before,
