--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -118,6 +118,7 @@
   height: $height;
   background-color: #eee;
   border-radius: $radius;
+  overflow: hidden;
 
   &::after {
     position: absolute;
