--- a/src/components/common/Form/Form.module.scss
+++ b/src/components/common/Form/Form.module.scss
@@ -1,6 +1,7 @@
 .form {
   position: relative;
   height: 100%;
+  max-height: 80vh;
   padding: 2rem 2.5rem;
   background-color: $color-white;
   border-radius: 20px;
@@ -12,7 +13,6 @@
   }
 
   @include mobile {
-    height: 80vh;
     padding: 1.8rem 2rem;
     border-radius: 10px;
   }
@@ -47,5 +47,3 @@
     flex-direction: column;
   }
 }
-
-
