--- a/src/components/common/ItemDetails/ItemDetails.module.scss
+++ b/src/components/common/ItemDetails/ItemDetails.module.scss
@@ -1,7 +1,10 @@
 .details {
+  height: 100%;
+  max-height: 80vh;
   padding: 2rem;
   background-color: $color-white;
   border-radius: 20px;
+  overflow-y: auto;
 
   @include tablet {
     padding: 1.75rem;
